unpackaged/main/default/objects/Contact/fields/Outreach_Last_Touched__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Last_Touched__c</fullName>
    <description>Date the Lead was last touched from an Outreach activity (Email, Sequence). Used to pass the date to Hubspot</description>
    <label>Outreach Last Touched</label>
    <type>DateTime</type>
</CustomField>