unpackaged/main/default/objects/Contact/fields/Outreach_Months_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Months_Since_Last_Activity__c</fullName>
    <formula>IF(LastActivityDate&gt;datevalue("2022-12-31"),
    text(
        MFLOOR(
            (today() - LastActivityDate)/30
            )   
        )
        &amp;" Months",
    "Historical"
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outreach: Months Since Last Activity</label>
    <type>Text</type>
</CustomField>