unpackaged/main/default/objects/Contact/fields/Outreach_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adding to separate Email Opt out and Outreach Opt Out</description>
    <inlineHelpText>Opt out of Outreach Content and Sequences</inlineHelpText>
    <label>Outreach Opt Out</label>
    <type>Checkbox</type>
</CustomField>