unpackaged/main/default/objects/Contact/fields/Owner_Match__c.field-meta.xml
<CustomField>
    <fullName>Owner_Match__c</fullName>
    <formula>OwnerId = Account.OwnerId</formula>
    <label>Owner Match</label>
    <type>Checkbox</type>
</CustomField>