unpackaged/main/default/objects/Contact/fields/P21_ContactID__c.field-meta.xml
<CustomField>
    <fullName>P21_ContactID__c</fullName>
    <externalId>true</externalId>
    <label>P21 ContactID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>