unpackaged/main/default/objects/Contact/fields/Position_in_Company__c.field-meta.xml
<CustomField>
    <fullName>Position_in_Company__c</fullName>
    <label>Position in Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Engineering Manager</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Quality Manager</fullName>
            </value>
            <value>
                <fullName>Shop Manager</fullName>
            </value>
            <value>
                <fullName>Finance/Accounting Dept</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>