unpackaged/main/default/objects/Contact/fields/Pre_Lead_Supression__c.field-meta.xml
<CustomField>
    <fullName>Pre_Lead_Supression__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Supressing Leads/Contacts from Marketing Emails</description>
    <label>Pre Lead Supression</label>
    <type>Checkbox</type>
</CustomField>