unpackaged/main/default/objects/Contact/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Primary Email of the Contact.</description>
    <externalId>true</externalId>
    <inlineHelpText>Adjust the email above to change the value. The Primary Email Address is a unique email in the system.</inlineHelpText>
    <label>Primary Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>