unpackaged/main/default/objects/Contact/fields/QSO_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>QSO_Quote_Date__c</fullName>
    <description>The date in which a QSO assigned to a quote would be awarded.</description>
    <inlineHelpText>The date in which a QSO assigned to a quote would be awarded.</inlineHelpText>
    <label>[dnu] QSO Quote Date</label>
    <type>DateTime</type>
</CustomField>