unpackaged/main/default/objects/Contact/fields/QSO_Webinar_Date__c.field-meta.xml
<CustomField>
    <fullName>QSO_Webinar_Date__c</fullName>
    <description>The date in which a QSO assigned to a webinar would be awarded.</description>
    <inlineHelpText>The date in which a QSO assigned to a webinar would be awarded.</inlineHelpText>
    <label>[dnu] QSO Webinar Date</label>
    <type>DateTime</type>
</CustomField>