unpackaged/main/default/objects/Contact/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <description>2021-07-21; part of moving towards a more flexible and scalable way to handle customers owned by Business Development team</description>
    <formula>!ISBLANK(Phone) &amp;&amp;
(
 !ISBLANK(Contact_s_Date_of_First_Order__c) ||
 (
  !ISBLANK(Customer_Prediction_Score__c) &amp;&amp;
  Customer_Prediction_Score__c &gt;= 0.50
 )
)</formula>
    <label>Qualified</label>
    <type>Checkbox</type>
</CustomField>