unpackaged/main/default/objects/Contact/fields/QualtricsOptOut__c.field-meta.xml
<CustomField>
    <fullName>QualtricsOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt out of Qualtrics Surveys - Future Use.</description>
    <label>Qualtrics Opt-Out</label>
    <type>Checkbox</type>
</CustomField>