unpackaged/main/default/objects/Contact/fields/Quoter_Segment__c.field-meta.xml
<CustomField>
    <fullName>Quoter_Segment__c</fullName>
    <label>Quoter Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>