unpackaged/main/default/objects/Contact/fields/Requested_Changes__c.field-meta.xml
<CustomField>
    <fullName>Requested_Changes__c</fullName>
    <inlineHelpText>What changes would Xometry have to make to earn more of your business? Answer from SurveyMonkey</inlineHelpText>
    <label>Requested Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>