unpackaged/main/default/objects/Contact/fields/Retention_Countdown2__c.field-meta.xml
<CustomField>
    <fullName>Retention_Countdown2__c</fullName>
    <formula>if( Account_Owner_Type__c='BDR', Account.Retention_Countdown__c ,
if(  AM_Retention_Countdown_Calculation__c  = 1234, '', text( AM_Retention_Countdown_Calculation__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[DNU]Retention Countdown</label>
    <type>Text</type>
</CustomField>