unpackaged/main/default/objects/Contact/fields/Retention_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Retention_Countdown__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[DNU]Retention Countdown Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>