unpackaged/main/default/objects/Contact/fields/Retention_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Retention_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retention Exemption</label>
    <type>Checkbox</type>
</CustomField>