unpackaged/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Clearbit, https://help.clearbit.com/hc/en-us/articles/115015526128-How-is-Role-and-Seniority-defined-</description>
    <inlineHelpText>Person's standardized role, based on title (ex: sales, marketing, etc.)</inlineHelpText>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>