unpackaged/main/default/objects/Contact/fields/Rolling_12_Spend__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Spend__c</fullName>
    <label>Rolling 12 Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>