unpackaged/main/default/objects/Contact/fields/Safe_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Contact_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Safe Contact ID</label>
    <type>Text</type>
</CustomField>