unpackaged/main/default/objects/Contact/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <inlineHelpText>Person's seniority at employer (manager, director, executive)</inlineHelpText>
    <label>Seniority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>