unpackaged/main/default/objects/Contact/fields/SF_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Campaign_Name__c</fullName>
    <label>SF Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>