unpackaged/main/default/objects/Contact/fields/SFDC_FOR_HS_ID_CONLEAD__c.field-meta.xml
<CustomField>
    <fullName>SFDC_FOR_HS_ID_CONLEAD__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS - SF Safe ID</label>
    <type>Text</type>
</CustomField>