unpackaged/main/default/objects/Contact/fields/SFDC_HS_STOP_SYNC__c.field-meta.xml
<CustomField>
    <fullName>SFDC_HS_STOP_SYNC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Special flag to stop syncing</description>
    <inlineHelpText>Indicates that this record should stop syncing to Hubspot</inlineHelpText>
    <label>HS - Stop Sync</label>
    <type>Checkbox</type>
</CustomField>