unpackaged/main/default/objects/Contact/fields/Strategic_Target__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Target__c</fullName>
    <formula>Account.X2020_Strategic_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Target</label>
    <type>Checkbox</type>
</CustomField>