unpackaged/main/default/objects/Contact/fields/Sub_role__c.field-meta.xml
<CustomField>
    <fullName>Sub_role__c</fullName>
    <label>Sub-role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>