unpackaged/main/default/objects/Contact/fields/Success_Team__c.field-meta.xml
<CustomField>
    <fullName>Success_Team__c</fullName>
    <formula>Account.Success_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Team</label>
    <type>Checkbox</type>
</CustomField>