unpackaged/main/default/objects/Contact/fields/Sup_DateOfFirstOrder__c.field-meta.xml
<CustomField>
    <fullName>Sup_DateOfFirstOrder__c</fullName>
    <label>Supplies Date of First Order</label>
    <type>Date</type>
</CustomField>