unpackaged/main/default/objects/Contact/fields/Sup_DateOfFirstQuote__c.field-meta.xml
<CustomField>
    <fullName>Sup_DateOfFirstQuote__c</fullName>
    <label>Supplies Date of First Quote</label>
    <type>Date</type>
</CustomField>