unpackaged/main/default/objects/Contact/fields/Sup_DateOfLastQuote__c.field-meta.xml
<CustomField>
    <fullName>Sup_DateOfLastQuote__c</fullName>
    <label>Supplies Date of Last Quote</label>
    <type>Date</type>
</CustomField>