unpackaged/main/default/objects/Contact/fields/Sup_FintechPrivileges__c.field-meta.xml
<CustomField>
    <fullName>Sup_FintechPrivileges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fintech Privileges</label>
    <type>Checkbox</type>
</CustomField>