unpackaged/main/default/objects/Contact/fields/Sup_NumberQuotes__c.field-meta.xml
<CustomField>
    <fullName>Sup_NumberQuotes__c</fullName>
    <label>Supplies Number of Quotes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>