unpackaged/main/default/objects/Contact/fields/Supplies_Last_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Last_Opp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplies Last Opp Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SuppliesContacts</relationshipName>
    <type>Lookup</type>
</CustomField>