unpackaged/main/default/objects/Contact/fields/Supplies_Last_Owner_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Last_Owner_DateTime__c</fullName>
    <description>Contains either a Supplies Owner taking ownership of an Opportunity or Date of the Last Activity</description>
    <label>Supplies Last Owner DateTime</label>
    <type>DateTime</type>
</CustomField>