unpackaged/main/default/objects/Contact/fields/Suppress_Opps_and_Leads_Flag__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Opps_and_Leads_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to stop automated creation of leads and opps on Contact when a quote comes in. Reps feel free to use this flag when a contact creates a lot of quote noise.  This flag can be toggled on/off. When set to true the suppression is activated.</description>
    <label>Suppress Opps and Leads Flag</label>
    <type>Checkbox</type>
</CustomField>