unpackaged/main/default/objects/Contact/fields/Target_Account_2023__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_2023__c</fullName>
    <formula>IF(Account.Target_Account_2023__c = TRUE, TRUE,
 IF(!ISBLANK(Account.ParentId) &amp;&amp; Account.Parent.Target_Account_2023__c = TRUE, TRUE,
  FALSE
 )
)</formula>
    <label>Target Account 2023</label>
    <type>Checkbox</type>
</CustomField>