unpackaged/main/default/objects/Contact/fields/Teamspace_User_Invitation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Teamspace_User_Invitation_Sent__c</fullName>
    <label>Teamspace User Invitation Sent</label>
    <type>DateTime</type>
</CustomField>