unpackaged/main/default/objects/Contact/fields/Ultimate_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Created_By__c</fullName>
    <description>Mapped from Lead Ultimate Created By(text)</description>
    <label>Ultimate Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>