unpackaged/main/default/objects/Contact/fields/Ultimate_Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Created_By_Role__c</fullName>
    <description>Mapped from lead ultimate created by role field.  Which is stamped with the role(text) by a flow.</description>
    <label>Ultimate Created By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>