unpackaged/main/default/objects/Contact/fields/UTC_Offset__c.field-meta.xml
<CustomField>
    <fullName>UTC_Offset__c</fullName>
    <label>UTC Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>