unpackaged/main/default/objects/Contact/fields/vc_status__c.field-meta.xml
<CustomField>
    <fullName>vc_status__c</fullName>
    <description>Account-based status of Denied Parties Screening</description>
    <label>Visual Compliance Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>