unpackaged/main/default/objects/Contact/fields/Vertical_Markets__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Markets__c</fullName>
    <formula>TEXT(Account.Vertical_Markets__c)</formula>
    <inlineHelpText>Value of the Account's "Vertical Markets" field</inlineHelpText>
    <label>Vertical Markets</label>
    <type>Text</type>
</CustomField>