unpackaged/main/default/objects/Contact/fields/X20200601_Stimulus_50__c.field-meta.xml
<CustomField>
    <fullName>X20200601_Stimulus_50__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tag to identify any quoter or orderer that received $50 stimulus from Xometry.</description>
    <inlineHelpText>Tag to identify any quoter or orderer that received $50 stimulus from Xometry.</inlineHelpText>
    <label>[decommissioned] 20200601 Stimulus 50</label>
    <type>Checkbox</type>
</CustomField>