unpackaged/main/default/objects/Contact/fields/X2021_Strategic_Target__c.field-meta.xml
<CustomField>
    <fullName>X2021_Strategic_Target__c</fullName>
    <formula>if( Account.X2021_Strategic_Target__c ,true ,false)</formula>
    <label>2021 Strategic Target</label>
    <type>Checkbox</type>
</CustomField>