unpackaged/main/default/objects/Contact/fields/X30_Day_Activity__c.field-meta.xml
<CustomField>
    <fullName>X30_Day_Activity__c</fullName>
    <formula>ENCODED:[treatNullAsNull]{!ID:ActivityMetricRollup.TotalActivities30Days}</formula>
    <label>30-Day Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>