unpackaged/main/default/objects/Contact/fields/X7_Day_Activity__c.field-meta.xml
<CustomField>
    <fullName>X7_Day_Activity__c</fullName>
    <formula>ENCODED:[treatNullAsNull]{!ID:ActivityMetricRollup.TotalActivities7Days}</formula>
    <label>7-Day Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>