unpackaged/main/default/objects/Contact/fields/Xom_Original_Campaign_Medium__c.field-meta.xml
<CustomField>
    <fullName>Xom_Original_Campaign_Medium__c</fullName>
    <label>Xom Original Campaign Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>