unpackaged/main/default/objects/Contact/fields/Xom_Original_Campaign_Term__c.field-meta.xml
<CustomField>
    <fullName>Xom_Original_Campaign_Term__c</fullName>
    <label>Xom Original Campaign Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>