unpackaged/main/default/objects/Contact/fields/Xom_Original_Source_Drill_Down1__c.field-meta.xml
<CustomField>
    <fullName>Xom_Original_Source_Drill_Down1__c</fullName>
    <label>Xom Original Source Drill-Down1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>