unpackaged/main/default/objects/Contact/fields/Xometry_ERP_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_ERP_Contact_ID__c</fullName>
    <description>The unique Contact Id that is created by the Xometry ERP</description>
    <externalId>true</externalId>
    <label>ERP Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>