unpackaged/main/default/objects/Contact/fields/YTD_Spend__c.field-meta.xml
<CustomField>
    <fullName>YTD_Spend__c</fullName>
    <label>YTD Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>