unpackaged/main/default/objects/Contact/validationRules/Email_must_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_must_not_be_blank</fullName>
    <active>true</active>
    <description>Email must not be empty or changed</description>
    <errorConditionFormula>ISBLANK(Email)
||  
ISCHANGED(Email)

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Contact_VR</errorConditionFormula>
    <errorMessage>Email is required. Each contact must have a unique Email and Email cannot be changed.</errorMessage>
</ValidationRule>