unpackaged/main/default/objects/Contact/validationRules/Sales_Contacts_Converted_From_Leads_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Contacts_Converted_From_Leads_Only</fullName>
    <active>true</active>
    <description>Sales Users can only create Contacts by Converting a Lead</description>
    <errorConditionFormula>ISNEW() &amp;&amp;
ISBLANK(Lead_Created_Date_Time__c) &amp;&amp;
$User.ProfileName__c = 'Xometry Sales User'

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Contact_VR</errorConditionFormula>
    <errorMessage>Sales Users can only create Contacts by Converting a Lead</errorMessage>
</ValidationRule>