unpackaged/main/default/objects/Contact/listViews/Adam_Riney_View.listView-meta.xml
<ListView>
    <fullName>Adam_Riney_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Last_Activity_Date_AM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Riney</value>
    </filters>
    <filters>
        <field>Account_Name__c</field>
        <operation>equals</operation>
        <value>Sandia National Laboratories</value>
    </filters>
    <filters>
        <field>Last_Activity_Date_AM__c</field>
        <operation>lessOrEqual</operation>
        <value>3/15/2022 12:00 AM</value>
    </filters>
    <label>Adam Riney - View</label>
</ListView>