unpackaged/main/default/objects/Contact/listViews/All_My_Contacts.listView-meta.xml
<ListView>
    <fullName>All_My_Contacts</fullName>
    <columns>Last_Activity_Date_AM__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Position_in_Company__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>Date_of_Last_Quote__c</columns>
    <columns>Date_of_Last_Order__c</columns>
    <columns>Contact_s_Date_of_First_Order__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All My Contacts</label>
</ListView>