unpackaged/main/default/objects/Contact/listViews/All_My_Strategic_Target_Contacts.listView-meta.xml
<ListView>
    <fullName>All_My_Strategic_Target_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Position_in_Company__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Last_Activity_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Strategic_Target__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All My Strategic Target Contacts</label>
</ListView>